Ajout des fonctions d'import/export du modèle DonUT depuis/vers un conteneur de données du point de connexion S3 Onyxia (src/util/S3_storage.py) ; Màj des chemins pour faire fonctionner DonUT depuis la racine du projet formIAble (src/testing_donut.py) ; Màj du .gitignore ; Ajout d'un front-end Streamlit (src/front-end/streamlit.py)

--- a/.gitignore
+++ b/.gitignore
@@ -135,5 +135,8 @@ dmypy.json
 .idea/
 
 /data/signatures
+/security/AWScredentials.info
+/src/data/synthetic_forms
 /src/models/craft_text_detector/models/craft_mlt_25k.pth
 /src/models/craft_text_detector/models/craft_refiner_CTW1500.pth
+/src/models/donut_trained
