--- a/.gitignore
+++ b/.gitignore
@@ -134,9 +134,9 @@ dmypy.json
 .pytype/
 .idea/
 
+/data/models
 /data/signatures
 /security/AWScredentials.info
 /src/data/synthetic_forms
 /src/models/craft_text_detector/models/craft_mlt_25k.pth
 /src/models/craft_text_detector/models/craft_refiner_CTW1500.pth
-/src/models/donut_trained
