Ajout et màj de commentaires, ajout de constantes et de la fonction get_and_save_image_and_path_from_document - exportant un document (PDF ou image) en tant qu'image, sauvegardée dans un fichier, et retournant le contenu de l'image ainsi exportée et son chemin -, et renommage de fonctions (src/util/utils.py) ; Ajout du répertoire ./data/tmp afin d'ignorer les fichiers créés temporairement lors des différents traitements (.gitignore) ; Renommage de variables, ajout de commentaires et des constantes et fonctions du module utils (src/pipeline/pipeline_PaddleOCR.py) ; Ajout de la sauvegarde du fichier téléversé avant sa transformation en image via une fonction du module utils, puis de sa suppression à l'issue des traitements et enfin d'une partie à compléter pour le processus de prétraitement du formulaire (transformations affines), màj de commentaires (src/front-end/pages/Analyse_automatique_de_formulaires_CERFA.py)

--- a/.gitignore
+++ b/.gitignore
@@ -134,9 +134,11 @@ dmypy.json
 .pytype/
 .idea/
 
-temp_cerfa_*.png
 /data/models
 /data/signatures
+/data/tmp
+#/data/tmp/dump_matrix_transformation
+#/data/tmp/temp_cerfa_*.png
 /security/AWScredentials.info
 /src/data/synthetic_forms
 /src/models/craft_text_detector/models/craft_mlt_25k.pth
