--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ name: Build Image
 on:
   push:
     branches:
-      - 'main'
+      - 'master'
     tags:
       - "*"
   workflow_dispatch:
@@ -20,7 +20,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: tomseimandi/formiable
+          images: tomseimandi/formiable:latest
           tags: |
             # set latest tag for main branch
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
