Fix Docker image tag

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,10 +20,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: tomseimandi/formiable:latest
+          images: tomseimandi/formiable
           tags: |
             # set latest tag for main branch
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
             # propagate valid semver tags
             type=semver,pattern={{raw}}
       -
