--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Faker==18.3.4
-faker_vehicle==0.2.0
-pdoc3==0.10.0
-numpy==1.24.2
-pdf2image==1.16.3
-Pillow==9.5.0
-python-dateutil==2.8.2
-six==1.16.0
+Faker
+faker_vehicle
+pdoc3
+numpy
+pdf2image
+Pillow
+python-dateutil
+six
 torch
 torchvision
 python-doctr
 pymupdf-fonts
 lanms-neo
-rapidfuzz==2.15.1
+rapidfuzz
 pymupdf
 python-Levenshtein
 opencv-python
