--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pdf2image==1.16.3
 Pillow==9.5.0
 python-dateutil==2.8.2
 six==1.16.0
-torch==2.0.1
+torch
 torchvision
 python-doctr
 pymupdf-fonts
@@ -23,7 +23,7 @@ openmim
 streamlit
 
 # DonUT
-pytorch_lightning>=1.9.0
+pytorch_lightning
 sconf
 timm==0.5.4
 transformers==4.25.1
